<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/black"
    android:id="@+id/acercade"
    tools:context=".acercade">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        android:background="@android:color/white">
        <!-- carta de carlos -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/pro_carlos1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pro_carlos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/carlos_antonio_sandoval_tadeo"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/programador_y_dise_ador"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- carta de gerson -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/pro_gerson2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pro_gerson" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gerson_alexander_vasquez_lima"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programador_y_diseniador"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- carta de steven -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:src="@drawable/pro_steven"
                    android:contentDescription="@string/pro_steven3"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steven_alexis_martinez_jimenez"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programador_y_dise_adorr"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- carta de manuel -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/pro_manuel4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pro_manuel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manuel_alexander_zepeda_grijalva"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programador_y_diseneador"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
